test/Parse/escaped_identifier_empty.swift
// RUN: %target-typecheck-verify-swift
``
// expected-error@-1 {{expected expression}}
